--- a/NewsApp/NewsCell/NewsCell.xib
+++ b/NewsApp/NewsCell/NewsCell.xib
@@ -16,23 +16,17 @@
                 <rect key="frame" x="0.0" y="0.0" width="378" height="106"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="qww-YR-gde">
-                        <rect key="frame" x="8" y="5" width="362" height="60"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Title" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qww-YR-gde">
+                        <rect key="frame" x="8" y="5" width="362" height="20"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="60" id="0rZ-M3-62Z"/>
+                            <constraint firstAttribute="height" priority="750" constant="20" id="0rZ-M3-62Z"/>
                         </constraints>
-                        <attributedString key="attributedText">
-                            <fragment content="Title">
-                                <attributes>
-                                    <font key="NSFont" size="30" name=".SFNS-Regular"/>
-                                    <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="truncatingTail" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
-                                </attributes>
-                            </fragment>
-                        </attributedString>
+                        <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="17"/>
+                        <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XKz-lF-fMu">
-                        <rect key="frame" x="8" y="70" width="362" height="31"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XKz-lF-fMu">
+                        <rect key="frame" x="8" y="30" width="362" height="71"/>
                         <attributedString key="attributedText">
                             <fragment content="Label">
                                 <attributes>
